--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,16 +4,15 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.2.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  charts_flutter: any
   flutter:
     sdk: flutter
-  charts_flutter: ^0.8.1
-  material_design_icons_flutter: ^4.0.5045
-  
   sliding_sheet:
     path: ../
+  
 
 dev_dependencies:
   flutter_test:
